force-app/main/default/objects/Invoice__c/fields/TAX_RATE__c.field-meta.xml
<CustomField>
    <fullName>TAX_RATE__c</fullName>
    <label>TAX RATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>