force-app/main/default/objects/Invoice__c/fields/TOTAL__c.field-meta.xml
<CustomField>
    <fullName>TOTAL__c</fullName>
    <formula>Amount__c + ( Amount__c *  TAX_RATE__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>