force-app/main/default/objects/Invoice__c/fields/Unit_price__c.field-meta.xml
<CustomField>
    <fullName>Unit_price__c</fullName>
    <label>Unit price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>